--- a/assets/css/untitled.css
+++ b/assets/css/untitled.css
@@ -44,3 +44,12 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   background: #fff;
 }
 
+#box-2 {
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(0deg,#ee0979,#6afffa);
+  background-size: cover;
+  display: table;
+  background-attachment: fixed;
+}
+
